--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,39 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>sedelaproto</title>
-  <base href="BASE_URL">
+  <title>Sedela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- <div role="application" data-cozy-token="{{.Token}}" data-cozy-domain="{{.Domain}}" data-cozy-locale="{{.Locale}}" data-cozy-app-name="{{.AppName}}" data-cozy-app-editor="{{.AppEditor}}" data-cozy-icon-path="{{.IconPath}}"></div>
- 
+  {{.CozyBar}}
 </head>
-<body>
-
-  <app-root myToken ='{{.Token}}' myDomain = '{{.Domain}}'>Loading...</app-root>
+<body onload="initCozyBar()">
+<div
+  role="application"
+  data-cozy-token="{{.Token}}"
+  data-cozy-domain="{{.Domain}}"
+  data-cozy-locale="{{.Locale}}"
+  data-cozy-app-editor="{{.AppEditor}}"
+  data-cozy-app-name="{{.AppName}}"
+  data-cozy-app-name-prefix="{{.AppNamePrefix}}"
+  data-cozy-app-slug="{{.AppSlug}}"
+  data-cozy-icon-path="{{.IconPath}}"
+  myToken ='{{.Token}}'
+  myDomain = '{{.Domain}}'
+>
+  Loading...
+</div>
+<script>
+function initCozyBar() {
+  const root = document.querySelector('[role=application]');
+  const data = root.dataset
+  window.cozy.bar.init({
+    appName: data.cozyAppName,
+    appSlug: data.cozyAppSlug,
+    iconPath: data.cozyIconPath,
+    lang: data.cozyLocale,
+    replaceTitleOnMobile: false
+  });
+}
+</script>
 </body>
 </html>
